@@ -1,3 +1,11 @@
+2011-11-19  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/debug/bitset (operator[](size_t) const): Declare constexpr.
+	* include/profile/bitset: Likewise.
+	* testsuite/23_containers/bitset/operations/constexpr.cc: Split out
+	non portable bits to...
+	* testsuite/23_containers/bitset/operations/constexpr-2.cc: ... here.
+
 2011-11-18  Harti Brandt  <hartmut.brandt@dlr.de>
 
 	PR libstdc++/51209
